syntax = "proto3";

package protos;

import "common.proto";
import "info.proto";
import "pipeline.proto";

option go_package = "github.com/streamdal/snitch-protos/build/go/protos";

service External {
  // Should return everything that is needed to build the initial view in the console
  rpc GetAll(GetAllRequest) returns (GetAllResponse);

  // Returns pipelines (_wasm_bytes field is stripped)
  rpc GetPipelines(GetPipelinesRequest) returns (GetPipelinesResponse);

  // Returns a single pipeline (_wasm_bytes field is stripped)
  rpc GetPipeline(GetPipelineRequest) returns (GetPipelineResponse);

  // Create a new pipeline; id must be left empty on create
  rpc CreatePipeline(CreatePipelineRequest) returns (CreatePipelineResponse);

  // Update an existing pipeline; id must be set
  rpc UpdatePipeline(UpdatePipelineRequest) returns (protos.StandardResponse);

  // Delete a pipeline
  rpc DeletePipeline(DeletePipelineRequest) returns (protos.StandardResponse);

  // Attach a pipeline to an audience
  rpc AttachPipeline(AttachPipelineRequest) returns (protos.StandardResponse);

  // Detach a pipeline from an audience
  rpc DetachPipeline(DetachPipelineRequest) returns (protos.StandardResponse);

  // Pause a pipeline; noop if pipeline is already paused
  rpc PausePipeline(PausePipelineRequest) returns (protos.StandardResponse);

  // Resume a pipeline; noop if pipeline is not paused
  rpc ResumePipeline(ResumePipelineRequest) returns (protos.StandardResponse);

  // Test method
  rpc Test(TestRequest) returns (TestResponse);
}

message GetAllRequest {
  // Don't think there is anything to pass in (yet)?
}

message GetAllResponse {
  // Clients currently connected to the server
  repeated protos.LiveInfo live = 1;

  // All of the audiences that are known to the server
  repeated protos.Audience audiences = 2;

  // All of the pipelines known to the server + pipeline <-> audience mappings
  // key == pipeline_id; if "Audience" is not filled out - pipeline is not attached
  // to any audience.
  map <string, protos.PipelineInfo> pipelines = 3;
}

message GetPipelinesRequest {
  // Don't think we need anything here
}

message GetPipelinesResponse {
  repeated protos.Pipeline pipelines = 1;
}

message GetPipelineRequest {
  string pipeline_id = 1;
}

message GetPipelineResponse {
  protos.Pipeline pipeline = 1;
}

message CreatePipelineRequest {
  protos.Pipeline pipeline = 1;
}

message CreatePipelineResponse {
  string message = 1;
  string pipeline_id = 2;
}

message UpdatePipelineRequest {
  protos.Pipeline pipeline = 1;
}

message DeletePipelineRequest {
  string pipeline_id = 1;
}

message AttachPipelineRequest {
  string pipeline_id = 1;
  protos.Audience audience = 2;
}

message DetachPipelineRequest {
  string pipeline_id = 1;
  protos.Audience audience = 2;
}

message PausePipelineRequest {
  string pipeline_id = 1;
  protos.Audience audience = 2;
}

message ResumePipelineRequest {
  string pipeline_id = 1;
  protos.Audience audience = 2;
}

message TestRequest {
  string input = 1;
}

message TestResponse {
  string output = 2;
}
